tests/fail/guard_no_return.tk
import std/sync::{Mutex, MutexLock}
import std/io::println
import core/result::{Result}
import std/error::{Error}

fn main() -> i32 {
    auto m# = Mutex<i32>::new(0)
    
    guard auto Result<MutexLock<i32>, Error>::Ok(g) = m#.lock() else {
        println("Failed to lock!")
        // No return! Should trigger ERR_GUARD_MUST_DIVERGE
    }
    
    return 0
}
