tests/fail/guard_no_return.stderr
error[E0554]: Naked destructuring of resource 'MutexLock_M_i32' is strictly forbidden to prevent silent copies and double-frees. You must use an explicit borrow '&' (e.g., '&g')
 --> tests/fail/guard_no_return.tk:9:50
  |
 9 |     guard auto Result<MutexLock<i32>, Error>::Ok(g) = m#.lock() else {
  |                                                  ^
error[E0465]: The 'else' block of a pattern matching guard must diverge (e.g., return, break)
 --> tests/fail/guard_no_return.tk:9:5
  |
 9 |     guard auto Result<MutexLock<i32>, Error>::Ok(g) = m#.lock() else {
  |     ^
